--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
     </header>
     <main>
         <div class="primeira">
-
+            <p>Premier League é uma liga profissional de futebol do Reino Unido e está no topo do sistema de ligas do futebol inglês, sendo a principal competição de futebol da nação insular.</p>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/0/07/Logo_Premier_League_2016_2017_1.jpg/250px-Logo_Premier_League_2016_2017_1.jpg" alt="Imagem da liga">
+        </div>
+        <div class="segunda">
+            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/0c/Liverpool_FC.svg/1200px-Liverpool_FC.svg.png" alt="liverpol" class="liver">
+            <p>Os maiores times da Premier Legaue São os seguintes clubes: Liverpol e Manchester City que atualmente estão disputando a vaga de primeiro lugar na liga</p>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/0/02/Manchester_City_Football_Club.png" alt="manchester city" class="city">
+        </div>
+        <div class="terceira">
+            <h2>Principais Tecnicos</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX-o-Q4pNu9TD7rD-NHB8YBUfzyBDBIQ9Q0w&s" alt="Alex">
+            <img src="https://media.cnn.com/api/v1/images/stellar/prod/gettyimages-2153744780.jpg?c=16x9&q=h_833,w_1480,c_fill" alt="Pep">
+            <img src="https://s2-ge.glbimg.com/-pRBJlgMCJsxQSW2KWfvs3Jukbs=/0x0:4189x2792/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2024/C/4/HNTbkAQWOQ7A5vMSq9cg/gettyimages-1899442278.jpg" alt="Jose">
         </div>
     </main>
 </body>
